width issue on mobile

--- a/src/app/maps/izmir-water/detailpanel/detailpanel.component.less
+++ b/src/app/maps/izmir-water/detailpanel/detailpanel.component.less
@@ -70,7 +70,7 @@
     display: flex;
     position: relative;
     width: 50%;
-    min-width: 400px;
+    min-width: 370px;
     justify-content: center;
     align-items: center;
   }
@@ -83,7 +83,7 @@
     row-gap: 1%;
     padding-right: 3%;
     padding-left: 3%;
-    min-width: 400px;
+    min-width: 370px;
     justify-content: center;
     align-items: center;
   }
